force-app/main/default/objects/B2BCategoriesMapping__c/B2BCategoriesMapping__c.object-meta.xml
<CustomObject>
    <description>Map between Item Group and Catalog Categories</description>
    <label>B2B Categories Mapping</label>
    <nameField>
        <label>Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>B2B Categories Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>