force-app/main/default/objects/B2BCategoriesMapping__c/fields/Catalog__c.field-meta.xml
<CustomField>
    <fullName>Catalog__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Catalog</label>
    <referenceTo>ProductCatalog</referenceTo>
    <relationshipLabel>B2B Categories Mappings</relationshipLabel>
    <relationshipName>B2B_Categories_Mappings</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>