force-app/main/default/objects/B2BCategoriesMapping__c/fields/ItemGroup__c.field-meta.xml
<CustomField>
    <fullName>ItemGroup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Item Group</label>
    <referenceTo>ItemGroup__c</referenceTo>
    <relationshipLabel>B2B Categories Mappings</relationshipLabel>
    <relationshipName>B2B_Categories_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>